--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/joeun?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.hikari.username=root
-spring.datasource.hikari.password=java
+spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://13.125.84.157:3306/joeun?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.hikari.username=joeunteam
+spring.datasource.hikari.password=java1234
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
 mybatis.configuration.map-underscore-to-camel-case=true
