--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'  /* Log4JDBC */
 	// https://mvnrepository.com/artifact/org.webjars/jquery
 	implementation 'org.webjars:jquery:3.3.1'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+// 아래 2개는 thymeleaf를 사용하는 경우에만 추가
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 
 
 
