--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ spring.datasource.hikari.username=joeunteam
 spring.datasource.hikari.password=java1234
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
 mybatis.configuration.map-underscore-to-camel-case=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=joeunMarketTeam
+spring.mail.password=zqseqarkwsreascm
+spring.mail.properties.mail.debug= true
+spring.mail.properties.mail.smtp.connectiontimeout = 5000
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=false
