메일 서비스 버그 수정
메일 서비스 설정 및 버그 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
 mybatis.configuration.map-underscore-to-camel-case=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=joeunMarketTeam
+spring.mail.username=joeunMarketTeam@gmail.com
 spring.mail.password=zqseqarkwsreascm
 spring.mail.properties.mail.debug= true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
