--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/joeun?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.hikari.username=root
-spring.datasource.hikari.password=java
+spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://13.125.84.157:3306/joeun?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.hikari.username=joeunteam
+spring.datasource.hikari.password=java1234
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
-# column name to camel case
 mybatis.configuration.map-underscore-to-camel-case=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=joeunMarketTeam@gmail.com
+spring.mail.password=zqseqarkwsreascm
+spring.mail.properties.mail.debug= true
+spring.mail.properties.mail.smtp.connectiontimeout = 5000
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=falseml
