--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,6 @@ spring.mail.properties.mail.debug= true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.auth=falseml
+spring.mail.properties.mail.smtp.auth=false
+spring.servlet.multipart.max-request-size=10MB 
+spring.servlet.multipart.max-file-size=1MB
