--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=false
 spring.servlet.multipart.max-request-size=10MB 
 spring.servlet.multipart.max-file-size=1MB
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache=false
 
 
+# change upload file size
+spring.servlet.multipart.maxFileSize=10MB
+spring.servlet.multipart.maxRequestSize=50MB
